--- a/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
+++ b/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
@@ -107,6 +107,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="carrier_supports_multianchor_conference" value="false"/>
         <!-- Config to show LTE+ icon if available -->
         <boolean name="hide_lte_plus_data_icon_bool" value="false"/>
+
+        <int name="lte_plus_threshold_bandwidth_khz_int" value="0"/>
     </carrier_config>
 
     <carrier_config mcc="001" mnc="01">
